--- a/acp.html
+++ b/acp.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form name="myform" onsubmit="">
+    <form name="myform">
      <p id="p"></p>
       Enter your age:  <input type="number" min=18 id="age" required>
       <button onclick="fun()">
